policies/kyverno/02-require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
  annotations:
    policies.kyverno.io/title: Exigir límites de CPU y memoria
    policies.kyverno.io/category: Práctica 8
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Todos los contenedores deben declarar requests y limits de CPU y memoria.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Todos los contenedores deben declarar 'resources.requests' y 'resources.limits' de cpu y memory."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
